# muc

./: .gitignore  Makefile  Makefile.am  bootstrap.sh  change_nameprefix.sh  config.h.in  configure.ac  create_crontab_file.sh  create_room.sh  muc.xml  muc.xml.dist.in
include/: conference.h  hash.h  lib.h  ndn.h
scripts/: Makefile.am  change_nameprefix.sh.in  create_room.sh.in  room  room.dist.in  roommaker.pl.in
src/: Makefile  Makefile.am  conference.c  conference_room.c  conference_user.c  hash.c  main.c  ndn.c  xdata.c  xdb.c
src/jabberd/: Makefile  jid.c  snprintf.c  str.c
src/jcomp/: Makefile  jcr_elements.c
